assets/css/style.css
/* here goes nothing */


body {
  background-image: url(../images/what-the-hex/what-the-hex.png);
  /* Background pattern from Toptal Subtle Patterns */
  height: 100%;
  width: 100%;
  margin: 0;
}

.wrapper{
  min-height: 100%;
  margin-bottom: -60px;
}

.firstPara {
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
  text-indent: 2em;
  line-height: 1.5em;
}

p {
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;;
  line-height: 1.5em;
}

header {
  background-color: #ffffff;
  border-bottom: solid;
  border-color: #cccccc;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 75px;
}

.topContainer {
  height: 75px;
  max-width: 960px;
  margin: auto;
  padding: 0;
}

a:hover {
  background-color: #4aaaa5;
}

nav a.active {
  background-color: #4aaaa5;
  color: #ffffff;
}

h1, h2, h3, li{
  font-family: 'Georgia', Times, Times New Roman, serif;
}

h3 {
  font-size: 20px;
}

.nameBar {
  width: 275px;
  height: 75px;
  background-color: #4aaaa5;
  float: left;
  /* I was an idiot and used relative positioning for this and I'm leaving it below to shame myself */
  /* position: absolute; */
  /* top: 0; */
  /* left: 18.75%; */
  /* this margin below really messed me up... gotta avoid that*/
  /* margin: 30px; */
}

h1 {
  position: relative;
  top: 20px;
  left: 20px;
  font-size: 30px;
  color: #ffffff;
}

h2 {
  font-size: 25px;
  color: #4aaaa5;
  margin: 5px 0 5px 0;
  padding: 20px 0 15px 0;
}

nav {
  float:right;
  padding-top: 15px;
  /* I was an idiot and used relative positioning for this and I'm leaving it below to shame myself */
  /* position: relative; */
  /* top: 10px; */
  /* right: 18.75%; */
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

li {
  float: left;
}

li a {
  display: inline-block;
  color: black;
  text-align: center;
  padding: 14px 16px;
}

.contentBox {
  width: 960px;
  background: #ffffff;
  position: relative;
  overflow: visible;
  top: 105px;
  margin: 0 auto;
}

.contentBox1 {
  width: 960px;
  height: 750px;
  background: #ffffff;
  position: relative;
  overflow: visible;
  top: 105px;
  margin: 0 auto;
  padding-bottom: 120px;
}

article {
  padding-bottom: 120px;
}

.clearfix::after {
    content: "";
    clear: both;
    display: table;
}

.portPic  {
  float: left;
  display: block;
  width: 274px;
  height: 205px;
  /* margin: 30px 30px 0 0; */
}

#profilePic {
  float: left;
  height: 200px;
  width: 220px;
  padding: 0 8px 8px 0;
}

.content {
  background: #ffffff;
  padding: 0 25px 0 25px;
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

.portContainer {
  float: left;
  width: 275px;
  height: 206px;
  margin: 30px 30px 0 0;
  position: relative;
}

.portfolioDescBox {
  float: left;
  position: absolute;
  text-align: center;
  left: 0;
  top: 150px;
  opacity: .9;
  padding: 2px;
  color: #ffffff;
  width: 270px;
  height: 35px;
  background-color: #4aaaa5;
}
.portfolioDescBox p {
  margin: 5px;
}

input  {
  width: 100%;
  margin: 5px 0 5px 0;

  /* padding: 10px 5px 10px 5px; */
}

textarea {
  margin-top: 10px;
  width: 100%;
  height: 140px;
  resize: none;
  /* padding: 10px; */
}

.subButton {
  background-color: #4aaaa5;
  color: #ffffff;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 5px 0 5px 0;
  cursor: pointer;
}

.footer {
  height: 60px;
  margin-top: -120px;
}

footer {
  position: fixed;
  bottom: 0;
  background: #666666;
  /* height: 60px; */
  width: 100%;
  border-top: solid;
  border-color: #4aaaa5;
  border-width: 10px;
  /* margin-top: -120px; */
}

.copyright {
  text-align: center;
  margin-top: 30px;
  color: #ffffff;
}

.contactMe {
  padding: 5px 0 5px 0;
  margin: 10px 0 10px 0;
}

